✨ feature agregado modulo de auth, funciona el register, falta terminar el login
