# api/routes/router.go
@@ -10,10 +10,11 @@ func SetupRoutes(deps *AppDependencies) *gin.Engine {
 	r.GET("/ping", func(c *gin.Context) {
 		c.JSON(200, gin.H{"message": "pong"})
 	})
-	
+
 	v1 := r.Group("/api/v1")
 	user := v1.Group("/users")
 	profile := v1.Group("/profile")
+	auth := v1.Group("/auth")
 	{
 		user.GET("/", deps.UserHandler.GetAllUsersHandler)
 		user.POST("/", deps.UserHandler.CreateUserHandler)
@@ -26,6 +27,10 @@ func SetupRoutes(deps *AppDependencies) *gin.Engine {
 		profile.GET("/:id", deps.ProfileHandler.GetProfileByIdHandler)
 		profile.PUT("/:id", deps.ProfileHandler.UpdateProfileHandler)
 		profile.DELETE("/:id", deps.ProfileHandler.SoftDeleteProfileHandler)
+	}
+	{
+		auth.POST("/register", deps.AuthHandler.RegisterUser)
+		auth.POST("/login", deps.AuthHandler.LoginUser)
 	}
 
 	return r
